add a CalendarCard widget,  First Version

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">速记提醒</string>
+    <string name="confirm">Confirm</string>
+    <string name="return_back">Back</string>
 </resources>
