add a CalendarCard widget,  --2

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">速记提醒</string>
     <string name="confirm">Confirm</string>
     <string name="return_back">Back</string>
+    <string name="please_waiting">Please waiting …</string>
 </resources>
