--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">QuickNote</string>
     <string name="confirm">Confirm</string>
     <string name="return_back">Back</string>
+    <string name="please_waiting">please waiting …</string>
 </resources>
